feat(memory): support for jedis, lettuce, redisson redis memory cluster and standalone implementations