@@ -1,3 +1,18 @@
+/*
+ * Copyright 2024-2025 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.alibaba.cloud.ai.memory.redis;
 
 import org.jetbrains.annotations.NotNull;
@@ -25,182 +40,178 @@ import java.util.stream.StreamSupport;
  * @author benym
  * @date 2025/7/30 18:47
  */
-public class RedissonRedisChatMemoryRepository extends BaseRedisChatMemoryRepository implements ChatMemoryRepository, AutoCloseable {
+public class RedissonRedisChatMemoryRepository extends BaseRedisChatMemoryRepository
+		implements ChatMemoryRepository, AutoCloseable {
 
-    private static final Logger logger = LoggerFactory.getLogger(RedissonRedisChatMemoryRepository.class);
+	private static final Logger logger = LoggerFactory.getLogger(RedissonRedisChatMemoryRepository.class);
 
-    private final RedissonClient redissonClient;
+	private final RedissonClient redissonClient;
 
-    private RedissonRedisChatMemoryRepository(RedissonClient redissonClient) {
-        super();
-        Assert.notNull(redissonClient, "redissonClient cannot be null");
-        this.redissonClient = redissonClient;
-    }
+	private RedissonRedisChatMemoryRepository(RedissonClient redissonClient) {
+		super();
+		Assert.notNull(redissonClient, "redissonClient cannot be null");
+		this.redissonClient = redissonClient;
+	}
 
-    public static RedissonBuilder builder() {
-        return new RedissonBuilder();
-    }
+	public static RedissonBuilder builder() {
+		return new RedissonBuilder();
+	}
 
-    public static class RedissonBuilder {
+	public static class RedissonBuilder {
 
-        private String host = "127.0.0.1";
+		private String host = "127.0.0.1";
 
-        /**
-         * example
-         * redis://127.0.0.1:6379,redis://127.0.0.1:6380,redis://127.0.0.1:6381
-         */
-        private List<String> nodes;
+		/**
+		 * example 127.0.0.1:6379,127.0.0.1:6380,127.0.0.1:6381
+		 */
+		private List<String> nodes;
 
-        private int port = 6379;
+		private int port = 6379;
 
-        private String username;
+		private String username;
 
-        private String password;
+		private String password;
 
-        private int timeout = 3000;
+		private int timeout = 2000;
 
-        private int poolSize = 32;
+		private int poolSize = 32;
 
-        private Config redissonConfig;
+		private Config redissonConfig;
 
-        private boolean useCluster = false;
+		private boolean useCluster = false;
 
-        public RedissonBuilder nods(List<String> nodes) {
-            this.nodes = nodes;
-            this.useCluster = true;
-            return this;
-        }
+		public RedissonBuilder nods(List<String> nodes) {
+			this.nodes = nodes;
+			this.useCluster = true;
+			return this;
+		}
 
-        public RedissonBuilder host(String host) {
-            this.host = host;
-            return this;
-        }
+		public RedissonBuilder host(String host) {
+			this.host = host;
+			return this;
+		}
 
-        public RedissonBuilder port(int port) {
-            this.port = port;
-            return this;
-        }
+		public RedissonBuilder port(int port) {
+			this.port = port;
+			return this;
+		}
 
-        public RedissonBuilder username(String username) {
-            this.username = username;
-            return this;
-        }
+		public RedissonBuilder username(String username) {
+			this.username = username;
+			return this;
+		}
 
-        public RedissonBuilder password(String password) {
-            this.password = password;
-            return this;
-        }
+		public RedissonBuilder password(String password) {
+			this.password = password;
+			return this;
+		}
 
-        public RedissonBuilder timeout(int timeout) {
-            this.timeout = timeout;
-            return this;
-        }
+		public RedissonBuilder timeout(int timeout) {
+			this.timeout = timeout;
+			return this;
+		}
 
-        public RedissonBuilder poolSize(int poolSize) {
-            this.poolSize = poolSize;
-            return this;
-        }
+		public RedissonBuilder poolSize(int poolSize) {
+			this.poolSize = poolSize;
+			return this;
+		}
 
-        public RedissonBuilder redissonConfig(Config redissonConfig) {
-            this.redissonConfig = redissonConfig;
-            return this;
-        }
+		public RedissonBuilder redissonConfig(Config redissonConfig) {
+			this.redissonConfig = redissonConfig;
+			return this;
+		}
 
-        public RedissonRedisChatMemoryRepository build() {
-            if (redissonConfig != null) {
-                return new RedissonRedisChatMemoryRepository(Redisson.create(redissonConfig));
-            }
-            Config config = new Config();
-            if (useCluster) {
-                config.useClusterServers()
-                        .addNodeAddress(nodes.toArray(new String[0]))
-                        .setConnectTimeout(timeout)
-                        .setSlaveConnectionPoolSize(poolSize)
-                        .setMasterConnectionPoolSize(poolSize);
-                if (StringUtils.hasLength(username)) {
-                    config.useClusterServers().setUsername(username);
-                }
-                if (StringUtils.hasLength(password)) {
-                    config.useClusterServers().setPassword(password);
-                }
-            } else {
-                config.useSingleServer()
-                        .setAddress("redis://" + host + ":" + port)
-                        .setConnectionPoolSize(poolSize)
-                        .setConnectTimeout(timeout);
-                if (StringUtils.hasLength(username)) {
-                    config.useSingleServer().setUsername(username);
-                }
-                if (StringUtils.hasLength(password)) {
-                    config.useSingleServer().setPassword(password);
-                }
-            }
-            return new RedissonRedisChatMemoryRepository(Redisson.create(config));
+		public RedissonRedisChatMemoryRepository build() {
+			if (redissonConfig != null) {
+				return new RedissonRedisChatMemoryRepository(Redisson.create(redissonConfig));
+			}
+			Config config = new Config();
+			if (useCluster) {
+				List<String> nodesUrl = nodes.stream().map(node -> "redis://" + node).toList();
+				config.useClusterServers()
+					.addNodeAddress(nodesUrl.toArray(new String[0]))
+					.setConnectTimeout(timeout)
+					.setSlaveConnectionPoolSize(poolSize)
+					.setMasterConnectionPoolSize(poolSize);
+				if (StringUtils.hasLength(username)) {
+					config.useClusterServers().setUsername(username);
+				}
+				if (StringUtils.hasLength(password)) {
+					config.useClusterServers().setPassword(password);
+				}
+			}
+			else {
+				config.useSingleServer()
+					.setAddress("redis://" + host + ":" + port)
+					.setConnectionPoolSize(poolSize)
+					.setConnectTimeout(timeout);
+				if (StringUtils.hasLength(username)) {
+					config.useSingleServer().setUsername(username);
+				}
+				if (StringUtils.hasLength(password)) {
+					config.useSingleServer().setPassword(password);
+				}
+			}
+			return new RedissonRedisChatMemoryRepository(Redisson.create(config));
 
-        }
-    }
+		}
 
-    @NotNull
-    @Override
-    public List<String> findConversationIds() {
-        RKeys keys = redissonClient.getKeys();
-        KeysScanOptions scanOptions = KeysScanOptions.defaults()
-                .pattern(DEFAULT_KEY_PREFIX + "*");
-        Iterable<String> keysIter = keys.getKeys(scanOptions);
-        return StreamSupport.stream(keysIter.spliterator(), false)
-                .map(key -> key.substring(DEFAULT_KEY_PREFIX.length()))
-                .collect(Collectors.toList());
-    }
+	}
 
-    @NotNull
-    @Override
-    public List<Message> findByConversationId(@NotNull String conversationId) {
-        Assert.hasText(conversationId, "conversationId cannot be null or empty");
-        RList<String> redisList = redissonClient.getList(
-                DEFAULT_KEY_PREFIX + conversationId
-        );
-        return redisList.readAll()
-                .parallelStream()
-                .map(this::deserializeMessage)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
-    }
+	@NotNull
+	@Override
+	public List<String> findConversationIds() {
+		RKeys keys = redissonClient.getKeys();
+		KeysScanOptions scanOptions = KeysScanOptions.defaults().pattern(DEFAULT_KEY_PREFIX + "*");
+		Iterable<String> keysIter = keys.getKeys(scanOptions);
+		return StreamSupport.stream(keysIter.spliterator(), false)
+			.map(key -> key.substring(DEFAULT_KEY_PREFIX.length()))
+			.collect(Collectors.toList());
+	}
 
-    @Override
-    public void saveAll(@NotNull String conversationId, @NotNull List<Message> messages) {
-        Assert.hasText(conversationId, "conversationId cannot be null or empty");
-        Assert.notNull(messages, "messages cannot be null");
-        Assert.noNullElements(messages, "messages cannot contain null elements");
-        RList<String> redisList = redissonClient.getList(
-                DEFAULT_KEY_PREFIX + conversationId
-        );
-        redisList.delete();
-        List<String> serializedMessages = messages.stream()
-                .map(this::serializeMessage)
-                .toList();
-        redisList.addAll(serializedMessages);
-    }
+	@NotNull
+	@Override
+	public List<Message> findByConversationId(@NotNull String conversationId) {
+		Assert.hasText(conversationId, "conversationId cannot be null or empty");
+		RList<String> redisList = redissonClient.getList(DEFAULT_KEY_PREFIX + conversationId);
+		return redisList.readAll()
+			.parallelStream()
+			.map(this::deserializeMessage)
+			.filter(Objects::nonNull)
+			.collect(Collectors.toList());
+	}
 
-    @Override
-    public void deleteByConversationId(@NotNull String conversationId) {
-        Assert.hasText(conversationId, "conversationId cannot be null or empty");
-        RList<String> redisList = redissonClient.getList(
-                DEFAULT_KEY_PREFIX + conversationId
-        );
-        redisList.delete();
-    }
+	@Override
+	public void saveAll(@NotNull String conversationId, @NotNull List<Message> messages) {
+		Assert.hasText(conversationId, "conversationId cannot be null or empty");
+		Assert.notNull(messages, "messages cannot be null");
+		Assert.noNullElements(messages, "messages cannot contain null elements");
+		RList<String> redisList = redissonClient.getList(DEFAULT_KEY_PREFIX + conversationId);
+		redisList.delete();
+		List<String> serializedMessages = messages.stream().map(this::serializeMessage).toList();
+		redisList.addAll(serializedMessages);
+	}
 
-    @Override
-    public void close() {
-        if (redissonClient != null && !redissonClient.isShutdown()) {
-            try {
-                int activeConnections = redissonClient.getConfig().getNettyThreads();
-                logger.info("Shutting down Redisson with {} active connections", activeConnections);
-                redissonClient.shutdown();
-                logger.info("Redisson client shutdown completed");
-            } catch (Exception e) {
-                logger.error("Error shutting down Redisson client", e);
-            }
-        }
-    }
+	@Override
+	public void deleteByConversationId(@NotNull String conversationId) {
+		Assert.hasText(conversationId, "conversationId cannot be null or empty");
+		RList<String> redisList = redissonClient.getList(DEFAULT_KEY_PREFIX + conversationId);
+		redisList.delete();
+	}
+
+	@Override
+	public void close() {
+		if (redissonClient != null && !redissonClient.isShutdown()) {
+			try {
+				int activeConnections = redissonClient.getConfig().getNettyThreads();
+				logger.info("Shutting down Redisson with {} active connections", activeConnections);
+				redissonClient.shutdown();
+				logger.info("Redisson client shutdown completed");
+			}
+			catch (Exception e) {
+				logger.error("Error shutting down Redisson client", e);
+			}
+		}
+	}
+
 }
